# Automatizacion-yt-full-tryhard

./: .env.example  .gitignore  PROGRESO.md  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 260173816f1b_initial_multi_channel_multi_niche_schema.py  a3f9b2c1d4e5_add_studio_models.py
backend/app/: main.py  schemas.py
backend/app/core/: config.py
backend/app/models/: __init__.py  audio_asset.py  channel.py  channel_metrics.py  competitor.py  niche.py  storyboard.py  title_template.py  video_clip.py  video_project.py
backend/app/routers/: audio_assets.py  channels.py  clips.py  niches.py  oauth.py  research.py  storyboards.py  video_projects.py
backend/app/services/: job_queue.py  metadata.py  render_client.py  research.py  title_patterns.py  youtube_client.py  youtube_oauth.py
docs/: PLAN.md
frontend/: Dockerfile  proxy.ts
frontend/app/: layout.tsx  page.tsx
frontend/app/api/audio-assets/: route.ts
frontend/app/api/channels/: route.ts
frontend/app/api/clips/: route.ts
frontend/app/api/login/: route.ts
frontend/app/api/logout/: route.ts
frontend/app/api/storyboards/: route.ts
frontend/app/channels/: page.tsx
frontend/app/channels/[id]/: page.tsx
frontend/app/login/: page.tsx
frontend/app/studio/: page.tsx
frontend/components/: Sidebar.tsx
frontend/lib/: api.ts
worker/: .dockerignore  Dockerfile  pyproject.toml
worker/app/: cli.py  db.py  render.py  worker.py
worker/app/jobs/: publish_job.py  render_job.py
worker/app/niches/: base.py  white_noise.py
(+20 files in other folders)
