[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "fastapi>=0.138.0",
    "google-api-python-client>=2.197.0",
    "google-auth-oauthlib>=1.0.0",
    "psycopg[binary]>=3.3.4",
    "pydantic-settings>=2.14.2",
    "redis>=5.0.0",
    "sqlalchemy>=2.0.51",
    "uvicorn[standard]>=0.49.0",
    "python-multipart>=0.0.9",
    "httpx>=0.27.0",
]
