[project]
name = "worker"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "google-api-python-client>=2.197.0",
    "google-auth-oauthlib>=1.0.0",
    "numpy>=2.5.0",
    "pillow>=12.2.0",
    "psycopg[binary]>=3.3.4",
    "redis>=8.0.0",
    "scipy>=1.18.0",
    "sqlalchemy>=2.0.51",
    "huggingface-hub>=0.24.0",
]
